--- a/index.html
+++ b/index.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="pt">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+
+    <title>SelfCare</title>
+  </head>
+  <body>
+    <div class="container">
+      <header class="cabecalho">
+        <span>&starf; selfcare</span>
+        <nav>
+          <ul>
+            <li>
+              <a href="#"
+                ><svg
+                  width="15"
+                  height="15"
+                  viewBox="0 0 47 46"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18.6741 34.0742C27.3306 34.0742 34.3481 27.0567 34.3481 18.4001C34.3481 9.7436 27.3306 2.72607 18.6741 2.72607C10.0175 2.72607 3 9.7436 3 18.4001C3 27.0567 10.0175 34.0742 18.6741 34.0742Z"
+                    stroke="#5CA720"
+                    stroke-width="4.11442"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M43.8892 43.6149L30.2596 29.9852"
+                    stroke="#5CA720"
+                    stroke-width="4.77037"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><svg
+                  width="15"
+                  height="15"
+                  viewBox="0 0 47 52"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M44.0153 49.0001V43.889C44.0153 41.1779 42.9383 38.5778 41.0213 36.6608C39.1043 34.7437 36.5042 33.6667 33.7931 33.6667H13.3487C10.6376 33.6667 8.03749 34.7437 6.12045 36.6608C4.20342 38.5778 3.12643 41.1779 3.12643 43.889V49.0001"
+                    stroke="#5CA720"
+                    stroke-width="4.77037"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M23.5711 23.4444C29.2166 23.4444 33.7933 18.8678 33.7933 13.2222C33.7933 7.57664 29.2166 3 23.5711 3C17.9255 3 13.3488 7.57664 13.3488 13.2222C13.3488 18.8678 17.9255 23.4444 23.5711 23.4444Z"
+                    stroke="#5CA720"
+                    stroke-width="4.77037"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><svg
+                  width="15"
+                  height="15"
+                  viewBox="0 0 47 45"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18.1214 42.1198C19.1478 42.1198 19.9799 41.2876 19.9799 40.2612C19.9799 39.2347 19.1478 38.4026 18.1214 38.4026C17.0949 38.4026 16.2628 39.2347 16.2628 40.2612C16.2628 41.2876 17.0949 42.1198 18.1214 42.1198Z"
+                    stroke="#5CA720"
+                    stroke-width="4.77037"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M38.5661 42.1198C39.5926 42.1198 40.4247 41.2876 40.4247 40.2612C40.4247 39.2347 39.5926 38.4026 38.5661 38.4026C37.5397 38.4026 36.7076 39.2347 36.7076 40.2612C36.7076 41.2876 37.5397 42.1198 38.5661 42.1198Z"
+                    stroke="#5CA720"
+                    stroke-width="4.77037"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M3.25243 3.08887H10.6868L15.6678 27.9753C15.8377 28.831 16.3032 29.5997 16.9828 30.1467C17.6624 30.6938 18.5127 30.9844 19.385 30.9677H37.4504C38.3226 30.9844 39.173 30.6938 39.8525 30.1467C40.5321 29.5997 40.9976 28.831 41.1676 27.9753L44.1413 12.3818H12.5454"
+                    stroke="#5CA720"
+                    stroke-width="4.77037"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="principal"></main>
+      <footer class="rodape"></footer>
+    </div>
+  </body>
 </html>
