--- a/index.html
+++ b/index.html
@@ -105,7 +105,101 @@
           </ul>
         </nav>
       </header>
-      <main class="principal"></main>
+      <main class="principal">
+        <section class="banner">
+          <img src="./assets/banner.png" alt="banner" />
+        </section>
+
+        <section class="conteudo">
+          <div class="promocao">
+            <h1>Promoção</h1>
+            <p>9 produtos</p>
+          </div>
+
+          <div class="produtos">
+            <div class="produto">
+              <img
+                src="./assets/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/devin-avery-bMH8ub9z1_U-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/devin-avery-BRVqq2uak4E-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/nery-montenegro-SmEty_TVr80-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/olena-sergienko-GOVTETevRm8-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/pharma-hemp-complex-tAzdKblAinw-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/phaedra-botanicals-uFAHrKYkTVI-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/pharma-hemp-complex-yVAXSK6zFIM-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+
+            <div class="produto">
+              <img
+                src="./assets/chandra-oh-y5hRv6UNKMg-unsplash.jpg"
+                alt="produto"
+              />
+              <p>Lorem ipsum dolor sit</p>
+              <p>R$<span>50,00</span></p>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="rodape"></footer>
     </div>
   </body>
